--- a/recipeapplication/pubspec.yaml
+++ b/recipeapplication/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  firebase_core: "1.1.0"
+  firebase_auth: "1.1.2"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
