--- a/recipeapplication/pubspec.yaml
+++ b/recipeapplication/pubspec.yaml
@@ -27,7 +27,10 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.2   
+  http: ^0.13.3
+  url_launcher: ^6.0.3
+  webview_flutter: ^2.0.4
 
 dev_dependencies:
   flutter_test:
@@ -62,12 +65,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Overpass
+      fonts:
+       - asset: assets/fonts/overpass-bold.otf
+    - family: OverpassRegular
+      fonts:
+        - asset: assets/fonts/overpass-regular.otf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
