--- a/recipeapplication/android/app/build.gradle
+++ b/recipeapplication/android/app/build.gradle
@@ -37,6 +37,7 @@ android {
         applicationId "ahmedkhan.example.recipeapplication"
         minSdkVersion 21
         targetSdkVersion 30
+        multiDexEnabled true
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
