--- a/recipeapplication/pubspec.yaml
+++ b/recipeapplication/pubspec.yaml
@@ -19,12 +19,15 @@ dependencies:
   url_launcher: ^6.0.3
   webview_flutter: ^2.0.4
   firebase_storage: ^8.0.3
-  firebase_auth: ^1.1.0
+  firebase_auth: ^1.2.0
+  firebase_core: ^1.2.0
+  #cloud_firestone: ^1.0.5
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  firebase_core: "1.1.0"
+
 
 flutter:
 
